lab/istio/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - "*"

  gateways:
    - prometheus

  http:
    - name: prometheus-scrape-url
      match:
        - uri:
            prefix: /prometheus/metrics

      rewrite:
        uri: "/metrics"

      route:
        - destination:
            host: prometheus
            port:
              number: 9090

    - name: prometheus-federate-url
      match:
        - uri:
            prefix: /prometheus/federate

      rewrite:
        uri: "/federate"

      route:
        - destination:
            host: prometheus
            port:
              number: 9090
